NEWS/ChangeLog for foreach
--------------------------

1.4.0   2012-04-11
    o   Moved welcome message from .onLoad to .onAttach. Bug report 
        from Benilton Carvalho.
    o   Modified setDoPar and setDoSeq to undo changes to .foreachGlobals
        on error. Bug report from Benilton Carvalho.
    o   Moved vignettes from inst/doc to vignettes. 
    o   Modified DESCRIPTION file by moving codetools, iterators, and utils
        from Depends to Imports. Bug report from Suraj Gupta.

1.3.5   2012-03-14
    o   Cleanup from previous patch. Bug report from Brian Ripley.

1.3.4   2012-03-12
    o   Added support for multiple sequential backends. (Idea and patch
        from Tyler Pirtle, Matt Furia, and Joseph Hellerstein.)
    o   Modified doRUnit.R to use no more than two cores during R CMD check.

1.3.2   2011-05-08
    o   Regularized unit tests so they can run through R CMD check
    o   Added support for compiler package of 2.13.0 and later.

1.3.1   2010-11-22
    o   First R-forge release.